tests/negative/interpolation_extra_closing_brace.osc
// EXPECT ERROR: Stray closing brace in an interpolated string literal.

fn! main() {
    println("oops }");
}
